--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.7
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.1.0
+  pinput: ^3.0.1
 
 dev_dependencies:
   flutter_test:
