--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   pinput: ^3.0.1
   responsive_sizer: ^3.3.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
