--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.7
+  shared_preferences: ^2.5.3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
